<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov9</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xvicentnavarro@lssu.edu">xavi</maintainer>
  <license>TODO: License declaration</license>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>visions_msgs</depend>
  <depend>fau_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>opencv-python</exec_depend>  <!-- or other dependencies -->
  <exec_depend>torch</exec_depend>
  <exec_depend>numpy</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
