<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov9_msgs</name>
  <version>0.0.0</version>
  <description>ROS2 package containing custom messages for YOLOv9 object detection.</description>
  <maintainer email="xvicentnavar2024@fau.edu">Xavier Vicent</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!--
      This package, yolov9_msgs, was created by Xavier Vicent.
      If you use or reference this code, please give appropriate credit.
    -->
  </export>
</package>

